# DiseasesPrediction

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.predict  README.md  Snakefile  pyproject.toml  render.yaml  requirements-pipeline.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml
config/: config.yaml  samples.tsv
docs/regulatory/: iec62304_software_lifecycle.md  intended_use_samd.md  risk_analysis_iso14971.md  validation_verification_plan.md
envs/: functional.yaml  host_removal.yaml  qc.yaml  taxonomy.yaml  trimming.yaml
scripts/: build_abundance_matrix.py  build_metaphlan_matrix.py  build_pathway_matrix.py  build_qc_summary.py
src/microbiome_predict/: __init__.py  app.py  bundle.py  classify.py  cli.py  data.py  features.py  ingest.py  integration.py  interpret.py  pdf.py  report.py  uncertainty.py  validation.py
src/microbiome_predict/models/: __init__.py  deepsurv.py  ensemble.py  interpretable.py  survival.py  wellness_index.py
tests/: conftest.py  test_classify.py  test_cli.py  test_data.py  test_deepsurv.py  test_ensemble.py  test_features.py  test_ingest.py  test_integration.py  test_interpret.py  test_interpretable.py  test_metaphlan_script.py  test_pdf.py  test_report.py  test_survival.py  test_uncertainty.py  test_validation.py  test_wellness_index.py
