[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome-predict"
version = "0.1.0"
description = "Predictive modeling layer for microbiome-based disease prediction: ensemble ML, GMWI2-style wellness index, prognostic survival model, reject-option uncertainty quantification, interpretability and clinical HTML reporting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Riad Rayhan" }]
keywords = ["microbiome", "metagenomics", "machine-learning", "disease-prediction", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavier / optional capabilities — keep core install slim.
survival = ["lifelines>=0.27"]      # Model 4 (Cox PH prognostic model)
deepsurv = ["torch>=2.0"]           # Model 4 alternative (DeepSurv neural survival)
interpret = ["shap>=0.44"]          # richer local explanations (falls back to occlusion if absent)
pdf = ["xhtml2pdf>=0.2.16"]         # PDF export of the clinical report
app = ["streamlit>=1.49"]           # optional web frontend
dev = ["pytest>=7.4"]

[project.scripts]
microbiome-predict = "microbiome_predict.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
